--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <title>Brain Stormers</title>
     </head>
     <body>
-        <h6>  Duda  </h6>
-        <h5>  Duda  </h5>
-        <h4>  Duda  </h4>
-        <h3>  Duda  </h3>
-        <h2>  Duda  </h2>
-        <h1>  Duda  </h1>
-        <p>TU ESTÁ DOENTÃO</p>
+        <h1>  Sexto cabeçalho </h1>
+        <h2>  Quinto cabeçalho </h2>
+        <h3>  Quarto cabeçalho </h3>
+        <h4>  Terceiro cabeçalho </h4>
+        <h5>  Segundo cabeçalho </h5>
+        <h6>  Primeiro cabeçalho  </h6>
+        <p> Primeiro paragrafo  </p>
     </body>
 </html>
