--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <title>Brain Stormers</title>
     </head>
     <body>
-        <h1>  Sexto cabeçalho </h1>
-        <h2>  Quinto cabeçalho </h2>
-        <h3>  Quarto cabeçalho </h3>
-        <h4>  Terceiro cabeçalho </h4>
-        <h5>  Segundo cabeçalho </h5>
-        <h6>  Primeiro cabeçalho  </h6>
-        <p> Primeiro paragrafo  </p>
+        <h1>
+            Minha pagina
+        </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam natus rerum debitis, facere illo iusto nulla obcaecati accusamus, odit totam expedita dolore, doloribus quasi beatae! Nemo, quas. Laboriosam, non cupiditate?
+        </p>
+        
     </body>
 </html>
