Add mais tag HTML

--- a/index.html
+++ b/index.html
@@ -7,12 +7,56 @@
         <title>Brain Stormers</title>
     </head>
     <body>
-        <h1>
+        <h1 id="primeiro">
             Minha pagina
         </h1>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam natus rerum debitis, facere illo iusto nulla obcaecati accusamus, odit totam expedita dolore, doloribus quasi beatae! Nemo, quas. Laboriosam, non cupiditate?
         </p>
-        
+        <ol>
+            <li>Matheus</li>
+            <li>Gabriel</li>
+            <li>Danilo</li>
+        </ol>
+        <ul>
+            <li>Notebook</li>
+            <li>Mouse</li>
+            <li>Teclado</li>
+        </ul>
+        <img src="Imagens/pokemon.png" alt="Varios pokemons">
+        <br>
+        <a href="https://github.com/matheusCMSampaio/Exercicio" target="_blank">GitHub</a>
+        <br>
+        <a href="Contato.html">
+            Ir para Contato
+        </a>
+        <br>
+        <a href="Cursos/index.html">Cursos</a>
+        <br>
+        <a href="Cursos/javascript.html">
+            Cursos JavaScript
+        </a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam doloremque quibusdam maiores, temporibus assumenda dolorum minima vel est, vitae soluta ut quam quia id laudantium quasi nostrum esse ex dignissimos.</p>
+        <a href="#primeiro">Ir para o inicio</a>
     </body>
 </html>
