--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1 id="primeiro">
             Minha pagina
         </h1>
+        <a href="Tabelas.html">Tabelas</a>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam natus rerum debitis, facere illo iusto nulla obcaecati accusamus, odit totam expedita dolore, doloribus quasi beatae! Nemo, quas. Laboriosam, non cupiditate?
         </p>
