--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <h1 id="primeiro">
             Minha pagina
         </h1>
+        <ul>
+            <li>
+                <a href="Tabelas.html">Tabelas</a>
+
+            </li>
+            <li><a href="Formularios.html">Formularios</a></li>
+        </ul>
         <a href="Tabelas.html">Tabelas</a>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam natus rerum debitis, facere illo iusto nulla obcaecati accusamus, odit totam expedita dolore, doloribus quasi beatae! Nemo, quas. Laboriosam, non cupiditate?
