--- a/Formularios.html
+++ b/Formularios.html
@@ -15,7 +15,7 @@
             <a href="index.html">HomePage</a>
         </li>
     </ul>
-    <form action="dados" action="index.html" method="get">
+    <form name="dados" action="index.html" method="get">
         <fieldset>
             <legend>Dados Pessoais</legend>
             <label for="idName">Name:</label>
